# bb-event-service

./: BUILD.bazel  README.md  WORKSPACE
cmd/bb_event_logger/: BUILD.bazel  main.go
cmd/bb_event_service/: BUILD.bazel  build_event_server.go  main.go
pkg/configuration/: BUILD.bazel  configuration.go
pkg/proto/configuration/bb_event_service/: BUILD.bazel  bb_event_service.proto
