load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-event-service/cmd/bb_event_logger",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@go_googleapis//google/devtools/build/v1:build_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "bb_event_logger",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)
